--- a/app/index.html
+++ b/app/index.html
@@ -24,6 +24,7 @@
     <button v-on:click='jump'>点我试试看</button>
     <input type="text" name="" id="" v-model.lazy='msg' placeholder="请输入">
     <p class="caa">{{msg}}</p>
+    <img src="./img/gulp图鉴.png" alt="学学gulp">
   </div>
   <script src='./lib/vue.js'></script>
   <script src="./lib/jquery-1.8.3.min.js"></script>
